updated Readme.md and requirement.txt . Also added entry.py entry file to run from a single python app entry point in local. Ready for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-index/
+# Virtual environments
+.venv/
+venv/
+
+# PyInstaller build
+build/
+dist/
+*.spec
+
+# Python cache
 __pycache__/
-*.pyc
+
+# System
+.DS_Store
 .env
