--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-langchain>=0.1.13
-langchain-community>=0.0.22
-langchain-openai>=0.0.8
-openai>=1.0.0
+streamlit>=1.31.0
+langchain>=0.1.15
+langchain-community>=0.0.16
+langchain-openai>=0.0.6
+openai>=1.12.0
 faiss-cpu
-chromadb
-pypdf
-tiktoken
+pdfplumber
 python-dotenv
